--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,15 @@
 
 
   <properties>
-    <commons-lang3.version>3.4</commons-lang3.version>
-    <slf4j.version>1.7.13</slf4j.version>
-    <logback.version>1.1.3</logback.version>
+    <commons-lang3.version>3.12.0</commons-lang3.version>
+    <slf4j.version>1.7.32</slf4j.version>
+    <logback.version>1.2.5</logback.version>
 
-    <junit.version>4.12</junit.version>
+    <junit.version>4.13.2</junit.version>
+
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <java.version>1.8</java.version>
   </properties>
 
   <dependencies>
@@ -51,14 +55,6 @@
       <groupId>org.slf4j</groupId>
       <artifactId>jul-to-slf4j</artifactId>
       <version>${slf4j.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-      <version>1.2</version>
-      <!-- 被 jcl-over-slf4j 代替 -->
-      <scope>provided</scope>
     </dependency>
     <!-- LOGGING end -->
 
